--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -30,6 +30,12 @@
         tools:layout="@layout/fragment_workouts" />
 
     <fragment
+        android:id="@+id/navigation_statistics"
+        android:name="com.example.sg2022_we_got_the_moves.ui.statistics.StatisticsFragment"
+        android:label="@string/title_statistics"
+        tools:layout="@layout/fragment_statistics" />
+
+    <fragment
         android:id="@+id/navigation_settings"
         android:name="com.example.sg2022_we_got_the_moves.ui.settings.SettingsFragment"
         android:label="@string/title_settings"
