--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,37 +7,37 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.sg2022_we_got_the_moves.ui.home.HomeFragment"
+        android:name="com.sg2022.we_got_the_moves.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.sg2022_we_got_the_moves.ui.dashboard.DashboardFragment"
+        android:name="com.sg2022.we_got_the_moves.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_training"
-        android:name="com.example.sg2022_we_got_the_moves.ui.training.TrainingFragment"
+        android:name="com.sg2022.we_got_the_moves.ui.training.TrainingFragment"
         android:label="@string/title_training"
         tools:layout="@layout/fragment_training" />
 
     <fragment
         android:id="@+id/navigation_workouts"
-        android:name="com.example.sg2022_we_got_the_moves.ui.workouts.WorkoutsFragment"
+        android:name="com.sg2022.we_got_the_moves.ui.workouts.WorkoutListFragment"
         android:label="@string/title_workouts"
         tools:layout="@layout/fragment_workouts" />
 
     <fragment
         android:id="@+id/navigation_statistics"
-        android:name="com.example.sg2022_we_got_the_moves.ui.statistics.StatisticsFragment"
+        android:name="com.sg2022.we_got_the_moves.ui.statistics.StatisticsFragment"
         android:label="@string/title_statistics"
         tools:layout="@layout/fragment_statistics" />
 
     <fragment
         android:id="@+id/navigation_settings"
-        android:name="com.example.sg2022_we_got_the_moves.ui.settings.SettingsFragment"
+        android:name="com.sg2022.we_got_the_moves.ui.settings.SettingsFragment"
         android:label="@string/title_settings"
         tools:layout="@layout/fragment_settings" />
 </navigation>
