--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -1,42 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
-            name="exerciseViewModel"
-            type="com.sg2022.we_got_the_moves.ui.workouts.viewmodel.ExerciseViewModel"/>
+            name="exercise"
+            type="com.sg2022.we_got_the_moves.db.entity.Exercise"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraint_layout_exercise_item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/text_counter_exercise_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:autofillHints="0"
-            android:background="@null"
             android:ems="2"
-            android:enabled="false"
-            android:hint="@string/zero"
             android:minWidth="32dp"
             android:minHeight="32dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="LabelFor,SpeakableTextPresentCheck,TextContrastCheck" />
 
         <TextView
             android:id="@+id/text_name_exercise_item"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="4dp"
             android:autofillHints="@string/app_name"
             android:background="@null"
             android:minHeight="32dp"
-            android:text="@{exerciseViewModel.exercise.name}"
+            android:text="@{exercise.name}"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/text_counter_exercise_item"
             app:layout_constraintTop_toTopOf="parent" />
 
