--- a/app/src/main/res/layout/item_workout.xml
+++ b/app/src/main/res/layout/item_workout.xml
@@ -35,7 +35,7 @@
                     android:id="@+id/check_box_workout_item"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="52dp"
                     android:autoSizeTextType="none"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/text_title_workout_item" />
@@ -47,11 +47,11 @@
                     android:autofillHints=""
                     android:background="@color/sg_design_green"
                     android:fontFamily="sans-serif"
+                    android:gravity="center|center_vertical"
                     android:hint="@string/title_workouts"
                     android:inputType="none"
                     android:minHeight="32dp"
                     android:text="@{workout.name}"
-                    android:textAlignment="center"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -63,28 +63,42 @@
                     android:id="@+id/edit_btn_workout_item"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/white"
+                    android:layout_marginTop="4dp"
+                    android:backgroundTint="#00FFFFFF"
                     android:contentDescription="@string/edit"
                     android:minHeight="48dp"
                     android:src="@drawable/ic_edit_black_24dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/text_title_workout_item" />
+                    app:layout_constraintTop_toBottomOf="@+id/text_title_workout_item"
+                    tools:ignore="ImageContrastCheck" />
 
                 <ImageButton
                     android:id="@+id/delete_btn_workout_item"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="#00FFFFFF"
                     android:contentDescription="@string/delete"
                     android:minHeight="48dp"
                     android:src="@drawable/ic_delete_black_24dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/edit_btn_workout_item" />
 
+                <ImageButton
+                    android:id="@+id/copy_btn_workout_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#00FFFFFF"
+                    android:contentDescription="@string/copy"
+                    android:minHeight="48dp"
+                    android:src="@drawable/ic_copy_black_24dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/delete_btn_workout_item" />
+
                 <LinearLayout
                     android:id="@+id/linear_layout_exercises"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginTop="4dp"
                     android:orientation="vertical"
                     app:layout_constraintEnd_toStartOf="@+id/edit_btn_workout_item"
                     app:layout_constraintStart_toEndOf="@+id/check_box_workout_item"
@@ -94,8 +108,9 @@
                         android:id="@+id/recyclerview_exercises"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
+                        android:layout_marginBottom="4dp"
                         tools:listitem="@layout/item_exercise" />
+
                 </LinearLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
