--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="sg_design_green">#009D81</color>
+    <color name="sg_design_green_transparent">#E6009D81</color>
+    <color name="sg_design_light_green">#8BC34A</color>
 </resources>
