--- a/app/src/main/res/drawable/ic_copy_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_copy_black_24dp.xml
@@ -1,23 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="1024"
-    android:viewportHeight="1024">
+    android:tint="#000000"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M746.9,698.1" />
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M925.7,288.7c-1.3,-1.2 -3.6,-3.3 -6.9,-6.3 -5.5,-5.1 -11.6,-10.8 -18.2,-16.9 -18.9,-17.5 -38,-35 -56,-51.4 -2,-1.8 -2,-1.8 -4.1,-3.7 -24.1,-21.8 -44.2,-39.6 -59,-52.1 -8.7,-7.3 -15.5,-12.8 -20.5,-16.4 -3.3,-2.4 -6,-4.1 -8.7,-5.4 -3.4,-1.6 -6.5,-2.6 -10.9,-2.5C729.5,134.2 720,143.8 720,155.7l0,42.5 0,42.5 0,84.9L720,347l21.2,0L890,347l0,595L358.7,942C323.4,942 295,913.1 295,877.9L295,177l361.2,0c11.7,0 21.3,-9.8 21.3,-21.5s-9.5,-21.5 -21.3,-21.5l-382.5,0L252,134l0,21.7L252,813l-52.4,0C166.6,813 140,786.9 140,754.7L140,72l566.3,0C739.3,72 766,98.2 766,130.4L766,134l40,0 0,-3.6C806,76.6 761.3,33 706.3,33L120,33 100,33l0,19.5 0,702.2C100,808.5 144.6,852 199.6,852L252,852l0,25.9C252,936.6 300,984 358.7,984l552.5,0L932,984l0,-21.2L932,325.6 932,304l0.4,0C932.4,299 930.2,292.9 925.7,288.7zM762,304l0,-63.3L762,198.2l0,-0.3c14,11.5 30.3,26.4 49.7,43.9 2,1.8 2.1,1.8 4.2,3.7 17.9,16.3 37,33.5 55.8,50.9 2.9,2.7 5.7,5.5 8.4,7.5L762,304z"
-        tools:ignore="VectorPath" />
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M816.9,436 L407.3,436c-11,0 -19.9,8.7 -19.9,19.5 0,10.8 8.9,19.5 19.9,19.5l409.6,0c11,0 19.9,-8.7 19.9,-19.5C836.8,444.7 827.9,436 816.9,436z" />
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M816.9,553 L407.3,553c-11,0 -19.9,8.7 -19.9,19.5 0,10.8 8.9,19.5 19.9,19.5l409.6,0c11,0 19.9,-8.7 19.9,-19.5C836.8,561.7 827.9,553 816.9,553z" />
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M816.9,689 L407.3,689c-11,0 -19.9,8.7 -19.9,19.5 0,10.8 8.9,19.5 19.9,19.5l409.6,0c11,0 19.9,-8.7 19.9,-19.5C836.8,697.7 827.9,689 816.9,689z" />
+        android:fillColor="@android:color/white"
+        android:pathData="M16,1L4,1c-1.1,0 -2,0.9 -2,2v14h2L4,3h12L16,1zM15,5l6,6v10c0,1.1 -0.9,2 -2,2L7.99,23C6.89,23 6,22.1 6,21l0.01,-14c0,-1.1 0.89,-2 1.99,-2h7zM14,12h5.5L14,6.5L14,12z" />
 </vector>
