--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
-            name="exercise"
-            type="com.sg2022.we_got_the_moves.db.entity.Exercise"/>
+            name="workoutExerciseAndExercise"
+            type="com.sg2022.we_got_the_moves.db.entity.relation.WorkoutExerciseAndExercise" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,10 +19,12 @@
             android:id="@+id/cardview_exercise_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="2dp"
+            android:layout_marginEnd="4dp"
             android:layout_marginBottom="2dp"
             app:cardBackgroundColor="@color/sg_design_light_green"
-            app:cardCornerRadius="16dp"
+            app:cardCornerRadius="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,16 +35,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/text_counter_exercise_item"
+                <Button
+                    android:id="@+id/button_counter_exercise_item"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:autofillHints="0"
-                    android:ems="3"
-                    android:gravity="center|center_vertical"
-                    android:minWidth="32dp"
-                    android:minHeight="32dp"
+                    android:background="@null"
+                    android:gravity="center"
+                    android:minWidth="48dp"
+                    android:minHeight="48dp"
+                    android:text="@{Integer.toString(workoutExerciseAndExercise.workoutExercise.amount)}"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -51,16 +56,16 @@
                     android:id="@+id/text_name_exercise_item"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:autofillHints="@string/app_name"
                     android:background="@null"
-                    android:gravity="center_vertical"
+                    android:gravity="center_vertical|end"
                     android:minHeight="32dp"
-                    android:text="@{exercise.name}"
+                    android:text="@{workoutExerciseAndExercise.exercise.name}"
+                    android:textSize="16sp"
                     android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/text_counter_exercise_item"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
