--- a/app/src/main/res/layout/item_workout.xml
+++ b/app/src/main/res/layout/item_workout.xml
@@ -8,15 +8,14 @@
 
         <import type="android.view.View" />
 
-        <import type="com.sg2022.we_got_the_moves.R" />
-
         <variable
             name="workout"
             type="com.sg2022.we_got_the_moves.db.entity.Workout" />
 
         <variable
-            name="util"
-            type="com.sg2022.we_got_the_moves.ui.workouts.util.WorkoutExpandUtil" />
+            name="visible"
+            type="java.lang.Boolean" />
+
     </data>
 
     <LinearLayout
@@ -80,7 +79,7 @@
                     android:backgroundTint="#00FFFFFF"
                     android:contentDescription="@string/edit"
                     android:minHeight="48dp"
-                    android:src="@drawable/ic_arrow_down_black_24dp"
+                    android:src="@{visible ? @drawable/ic_arrow_up_black_24dp : @drawable/ic_arrow_down_black_24dp,default=@drawable/ic_arrow_down_black_24dp}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/text_title_workout_item"
                     tools:ignore="ImageContrastCheck" />
@@ -128,7 +127,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"
-                    android:visibility="@{util.visibility}"
+                    android:visibility="@{visible ? View.VISIBLE : View.GONE, default = gone}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
