--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -41,7 +40,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:autofillHints="0"
-                    android:background="@null"
+                    android:contentDescription="@string/amount"
                     android:gravity="center"
                     android:minWidth="48dp"
                     android:minHeight="48dp"
@@ -49,16 +48,14 @@
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:ignore="LabelFor,SpeakableTextPresentCheck,TextContrastCheck" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/text_name_exercise_item"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
-                    android:autofillHints="@string/app_name"
-                    android:background="@null"
+                    android:autofillHints="@string/empty_string"
                     android:gravity="center_vertical|end"
                     android:minHeight="32dp"
                     android:text="@{workoutExerciseAndExercise.exercise.name}"
