--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -7,15 +7,10 @@
     android:layout_height="match_parent"
     tools:context="com.sg2022.we_got_the_moves.ui.training.TrainingFragment">
 
-    <TextView
-        android:id="@+id/text_training"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+    <SurfaceView
+        android:id="@+id/surfaceView"
+        android:layout_width="383dp"
+        android:layout_height="696dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
